--- a/backend/logger/templates/logger/detail.html
+++ b/backend/logger/templates/logger/detail.html
@@ -7,6 +7,9 @@
   <body>
     <p>Session by {{ session.user }}</p>
     <p>Started at {{ session.start }}</p>
+    {% if session.end %}
+    <p>Ended at {{ session.end }}</p>
+    {% endif %}
     <p>Total time: {{ session.total }}</p>
     <p>Logs: {{ session.log_set.count }}</p>
     <ul>
